ForestTrustFirewall/Templates/azuredeploy.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
  "parameters": {

    "virtualMachineSize": {
      "type": "string",
      "defaultValue": "Standard_D2_v2"
    },
    "adminUsername": {
      "type": "string",
      "defaultValue": "VADMIN"
    },
    "virtualNetworkName": {
      "type": "string",
      "defaultValue": "VNET02"
    },
    "adminPassword": {
      "type": "securestring",
      "defaultValue": "Test@2016"
    },
    "sku": {
      "type": "string",
      "allowedValues": [
        "2012-R2-Datacenter",
        "2016-Datacenter",
        "2008-R2-SP1"
      ],
      "defaultValue": "2012-R2-Datacenter"
    },
    "publicIpAddressType": {
      "type": "string",
      "defaultValue": "Dynamic"
    },
    "time": {
      "type": "string",
      "defaultValue": "23:00"
    },
    "dataDriveCount": {
      "type": "int",
      "minValue": 1,
      "defaultValue": 1
    },
    "GatewaySubnetPrefix": {
      "type": "string"
    },
    "VNETPrefix": {
      "type": "string"
    },
    "DC1-SubnetPrefix": {
      "type": "string"
    },
    "DC2-SubnetPrefix": {
      "type": "string"
    },
    "_artifactsLocation": {
      "type": "string",
      "metadata": {
        "description": "Auto-generated container in staging storage account to receive post-build staging folder upload"
      }
    },
    "_artifactsLocationSasToken": {
      "type": "securestring",
      "metadata": {
        "description": "Auto-generated token to access _artifactsLocation"
      }
    },
    "DCConfig1UpdateTagVersion": {
      "type": "string",
      "defaultValue": "1.0",
      "metadata": {
        "description": "This value must be changed from a previous deployment to ensure the extension will run"
      }
    },
    "DCConfig2UpdateTagVersion": {
      "type": "string",
      "defaultValue": "1.0",
      "metadata": {
        "description": "This value must be changed from a previous deployment to ensure the extension will run"
      }
    },
    "domain1Name": {
      "type": "string",
      "defaultValue": "contosoad.com"
    },
    "NetBiosDomain1name": {
      "type": "string",
      "defaultValue": "contosoad"
    }
  },

  "variables": {
    "VMNames": [
      "DC1",
      "DC2"
    ],
    "vnetSubnetName": [
      "DC1-Subnet",
      "DC2-Subnet"
    ],
    "NSGNames": [
      "NSG-DC1",
      "NSG-DC2"

    ],
    "vnetName": "VNET-FWLAB",
    "VnetID": "[resourceId('Microsoft.Network/virtualNetworks', variables('vnetName'))]",
    "subnetRef": [
      "[concat(variables('vnetId'), '/subnets/', variables('vnetSubnetName')[0])]",
      "[concat(variables('vnetId'), '/subnets/', variables('vnetSubnetName')[1])]"
    ],
    "DC1networkInterfaceName": "[concat(variables('VMNames')[0],'NIC')]",
    "DC1publicIpAddressName": "[concat(variables('VMNames')[0],'PUBLICIP')]",
    "DC2publicIpAddressName": "[concat(variables('VMNames')[1],'PUBLICIP')]",
    "DC2networkInterfaceName": "[concat(variables('VMNames')[1],'NIC')]",
    "DC1SubnetIPArray": "[split(parameters('DC1-SubnetPrefix'),'.')]",
    "DC2SubnetIPArray": "[split(parameters('DC2-SubnetPrefix'),'.')]",
    "DNSServerIP1": "[concat(variables('DC1SubnetIPArray')[0],'.',variables('DC1SubnetIPArray')[1],'.',variables('DC1SubnetIPArray')[2],'.','4')]",
    "DNSServerIP2": "[concat(variables('DC2SubnetIPArray')[0],'.',variables('DC2SubnetIPArray')[1],'.',variables('DC2SubnetIPArray')[2],'.','4')]",
    "DCConfigArchiveFolder": "DSC",
    "DCConfigArchiveFileName": "dsc.zip",
    "DCConfigDataFileName": "DCConfig.psd1",
    "DcDscConfigurationFunction": "DCConfig.ps1\\DcConfig",
    "projectName": "ForestTrustFirewall"

  },
  "resources": [
    //DC1 Public IP
    {
      "name": "[variables('DC1publicIpAddressName')]",
      "Type": "Microsoft.Network/publicIpAddresses",
      "apiVersion": "2015-06-15",
      "location": "[resourceGroup().location]",
      "tags": {
        "displayName": "DCP1ublicIP"
      },
      "Properties": {
        "publicIpAllocationMethod": "[parameters('publicIpAddressType')]"
      }
    },
    {
      "name": "[variables('DC2publicIpAddressName')]",
      "Type": "Microsoft.Network/publicIpAddresses",
      "apiVersion": "2015-06-15",
      "location": "[resourceGroup().location]",
      "tags": {
        "displayName": "DCP2ublicIP"
      },
      "Properties": {
        "publicIpAllocationMethod": "[parameters('publicIpAddressType')]"
      }
    },
    // NSG DC1
    {
      "comments": "# NSG",
      "name": "[variables('NSGNames')[0]]",
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "location": "[resourceGroup().location]",
      "tags": {
        "displayName": "NSG1"
      },
      "properties": {
        "securityRules": [
          {
            "name": "default-allow-rdp-in",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1000,
              "direction": "Inbound"
            }
          },
          {
            "name": "default-allow-winrm-in",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "5986",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 1500,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow-in-vnet-only",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 1600,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow-out-vnet-only",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 1700,
              "direction": "Outbound"
            }
          },
          {
            "name": "allow-out-443-internet",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "Internet",
              "access": "Allow",
              "priority": 1800,
              "direction": "Outbound"
            }
          }
        ]
      }
    },
    // NSG DC2
    {
      "comments": "# NSG",
      "name": "[variables('NSGNames')[1]]",
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "location": "[resourceGroup().location]",
      "tags": {
        "displayName": "NSG2"
      },
      "properties": {
        "securityRules": [
          {
            "name": "default-allow-rdp-in",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1000,
              "direction": "Inbound"
            }
          },
          {
            "name": "default-allow-winrm-in",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "5986",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 1500,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow-in-vnet-only",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 1600,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow-out-vnet-only",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 1700,
              "direction": "Outbound"
            }
          }

        ]
      }
    },
    //VNET Settings
    {
      "name": "[variables('VNETname')]",
      "type": "Microsoft.Network/virtualNetworks",
      "location": "[resourceGroup().location]",
      "apiVersion": "2016-03-30",
      "dependsOn": [
        "[concat('Microsoft.Network/networkSecurityGroups/',variables('NSGNames')[0])]",
        "[concat('Microsoft.Network/networkSecurityGroups/',variables('NSGNames')[1])]"
      ],
      "tags": {
        "displayName": "VNET"
      },
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[parameters('VNETPrefix')]"
          ]
        },
        "subnets": [
          {
            "name": "GatewaySubnet",
            "properties": {
              "addressPrefix": "[parameters('GatewaySubnetPrefix')]"

            }
          },
          {
            "name": "[variables('vnetSubnetName')[0]]",
            "properties": {
              "addressPrefix": "[parameters('DC1-SubnetPrefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups',variables('NSGNames')[0])]"
              }
            }
          },
          {
            "name": "[variables('vnetSubnetName')[1]]",
            "properties": {
              "addressPrefix": "[parameters('DC2-SubnetPrefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups',variables('NSGNames')[0])]"
              }
            }

          }
        ]
      }
    },
    //DC1 NIC
    {
      "name": "[variables('DC1networkInterfaceName')]",
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2015-06-15",
      "location": "[resourceGroup().location]",
      "dependsOn": [
        "[concat('Microsoft.Network/publicIpAddresses/',variables('DC1publicIpAddressName'))]",
        "[concat('Microsoft.Network/virtualNetworks/', variables('vnetName'))]"
      ],
      "tags": {
        "displayName": "DC1NIC"
      },
      "properties": {
        "primary": true,
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "subnet": {
                "id": "[variables('subnetRef')[0]]"
              },
              "privateIPAllocationMethod": "Static",
              "privateIPAddress": "[variables('DNSServerIP1')]",
              "publicIpAddress": {
                "id": "[resourceId('Microsoft.Network/publicIpAddresses', variables('DC1publicIpAddressName'))]"
              }
            }
          }
        ]

      }
    },
    {
      "name": "[variables('DC2networkInterfaceName')]",
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2015-06-15",
      "location": "[resourceGroup().location]",
      "dependsOn": [
        "[concat('Microsoft.Network/publicIpAddresses/',variables('DC2publicIpAddressName'))]",
        "[concat('Microsoft.Network/virtualNetworks/', variables('vnetName'))]"//,
        //"[concat('Microsoft.Network/networkInterfaces/', variables('DC1networkInterfaceName'))]"
      ],
      "tags": {
        "displayName": "DC2NIC"
      },
      "properties": {
        "primary": true,
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "subnet": {
                "id": "[variables('subnetRef')[1]]"
              },
              "privateIPAllocationMethod": "Static",
              "privateIPAddress": "[variables('DNSServerIP2')]",
              "publicIpAddress": {
                "id": "[resourceId('Microsoft.Network/publicIpAddresses', variables('DC2publicIpAddressName'))]"
              }
            }
          }
        ],
        "dnsSettings": {
          "dnsServers": [ "[reference(variables('DC1networkInterfaceName')).ipConfigurations[0].properties.privateIPAddress]" ]
        }
      }
    },
    {
      "name": "[variables('VMNames')[0]]",
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2017-03-30",
      "location": "[resourceGroup().location]",
      "dependsOn": [
        "[concat('Microsoft.Network/networkInterfaces/', variables('DC1networkInterfaceName'))]"
      ],
      "tags": {
        "displayName": "DC1"
      },
      "properties": {
        "osProfile": {
          "computerName": "[variables('VMNames')[0]]",
          "adminUsername": "[parameters('adminUsername')]",
          "adminPassword": "[parameters('adminPassword')]"
        },
        "hardwareProfile": {
          "vmSize": "[parameters('virtualMachineSize')]"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "MicrosoftWindowsServer",
            "offer": "WindowsServer",
            "sku": "[parameters('sku')]",
            "version": "latest"
          },
          "osDisk": {
            "createOption": "FromImage",
            "caching": "ReadWrite"
          },
          "copy": [
            {
              "name": "DataDisks",
              "count": "[parameters('dataDriveCount')]",
              "input": {
                "diskSizeGB": 20,
                "lun": "[copyIndex('dataDisks')]",
                "CreateOption": "Empty"
              }
            }
          ]
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('DC1networkInterfaceName'))]"
            }
          ]

        }

      },
        "resources": [
            {
                "name": "Microsoft.Powershell.DSC",
                "type": "extensions",
                "location": "[resourceGroup().location]",
                "apiVersion": "2015-06-15",
                "dependsOn": [
                    "[concat('Microsoft.Compute/virtualMachines/', variables('VMNames')[0])]"
                ],
                "tags": {
                    "displayName": "DCConfig1"
                },
              "properties": {
                "publisher": "Microsoft.Powershell",
                "type": "DSC",
                "typeHandlerVersion": "2.13",
                "autoUpgradeMinorVersion": true,
                "forceUpdateTag": "[parameters('DCConfig1UpdateTagVersion')]",
                "settings": {
                  "modulesUrl": "[concat(parameters('_artifactsLocation'), '/', 'dsc.zip')]",
                  "sasToken": "[parameters('_artifactsLocationSasToken')]",
                  "configurationFunction": "[variables('DcDscConfigurationFunction')]",
                  "properties": {
                    "nodeName": "localhost",
                    "domainName": "[parameters('domain1Name')]",
                    "NetBiosDomainname": "[parameters('NetBiosDomain1name')]",
                    "DomainAdminCredentials": {
                      "UserName": "[parameters('AdminUserName')]",
                      "Password": "PrivateSettingsRef:DomainAdminPassword"
                    },
                    "DataDiskNumber": "2",
                    "DataDriveLetter": "F"
                  }
                },
                "protectedSettings": {
                  "dataBlobUri": "[concat(parameters('_artifactsLocation'),'/',variables('projectName'), '/DSC/', variables('DCConfigDataFileName'), parameters('_artifactsLocationSasToken'))]",
                  "items": {
                    "DomainAdminPassword": "[parameters('AdminPassword')]"
                  }
                }
              }
            }
        ] //,
      //"resources": [
      //  {
      //    "name": "BuildConfig",
      //    "type": "extensions",
      //    "location": "[parameters('location')]",
      //    "apiVersion": "2015-06-15",
      //    "dependsOn": [
      //      "[concat('Microsoft.Compute/virtualMachines/', parameters('virtualMachineName'))]"
      //    ],
      //    "tags": {
      //      "displayName": "BuildConfig"
      //    },
      //    "properties": {
      //      "publisher": "Microsoft.Compute",
      //      "type": "CustomScriptExtension",
      //      "typeHandlerVersion": "1.9",
      //      "autoUpgradeMinorVersion": true,
      //      "settings": {
      //        "fileUris": [
      //          "[concat(variables('StorageAccount'), '/', variables('BuildConfigScriptFolder'), '/', variables('BuildConfigScriptFileName'), parameters('sasKey'))]"
      //        ],
      //        "commandToExecute": "[concat('powershell -ExecutionPolicy Unrestricted -File ', variables('BuildConfigScriptFileName'))]"
      //      }
      //    }
      //  }
      //]
    },
    {
      "name": "[variables('VMNames')[1]]",
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2017-03-30",
      "location": "[resourceGroup().location]",
      "dependsOn": [
        "[concat('Microsoft.Network/networkInterfaces/', variables('DC2networkInterfaceName'))]"
      ],
      "tags": {
        "displayName": "DC2"
      },
      "properties": {
        "osProfile": {
          "computerName": "[variables('VMNames')[1]]",
          "adminUsername": "[parameters('adminUsername')]",
          "adminPassword": "[parameters('adminPassword')]"
        },
        "hardwareProfile": {
          "vmSize": "[parameters('virtualMachineSize')]"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "MicrosoftWindowsServer",
            "offer": "WindowsServer",
            "sku": "[parameters('sku')]",
            "version": "latest"
          },
          "osDisk": {
            "createOption": "FromImage",
            "caching": "ReadWrite"
          },
                
          "DataDisks": [
            {
              "diskSizeGB": 20,
              "lun": 0,
              "CreateOption": "Empty"
            }
              
          ]
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('DC2networkInterfaceName'))]"
            }
          ]

        }

      },
        "resources": [
            //{
            //    "name": "Microsoft.Powershell.DSC",
            //    "type": "extensions",
            //    "location": "[resourceGroup().location]",
            //    "apiVersion": "2015-06-15",
            //    "dependsOn": [
            //        "[concat('Microsoft.Compute/virtualMachines/', variables('VMNames')[1])]"
            //    ],
            //    "tags": {
            //        "displayName": "DCConfig2"
            //    },
            //    "properties": {
            //        "publisher": "Microsoft.Powershell",
            //        "type": "DSC",
            //        "typeHandlerVersion": "2.9",
            //        "autoUpgradeMinorVersion": true,
            //        "forceUpdateTag": "[parameters('DCConfig2UpdateTagVersion')]",
            //        "settings": {
            //            "configuration": {
            //                "url": "[concat(parameters('_artifactsLocation'), '/', variables('DCConfigArchiveFolder'), '/', variables('DCConfigArchiveFileName'))]",
            //                "script": "DCConfig.ps1",
            //                "function": "Main"
            //            },
            //            "configurationArguments": {
            //                "nodeName": "[variables('VMNames')[1]]"
            //            }
            //        },
            //        "protectedSettings": {
            //            "configurationUrlSasToken": "[parameters('_artifactsLocationSasToken')]"
            //        }
            //    }
            //}
        ] //,
      //"resources": [
      //  {
      //    "name": "BuildConfig",
      //    "type": "extensions",
      //    "location": "[parameters('location')]",
      //    "apiVersion": "2015-06-15",
      //    "dependsOn": [
      //      "[concat('Microsoft.Compute/virtualMachines/', parameters('virtualMachineName'))]"
      //    ],
      //    "tags": {
      //      "displayName": "BuildConfig"
      //    },
      //    "properties": {
      //      "publisher": "Microsoft.Compute",
      //      "type": "CustomScriptExtension",
      //      "typeHandlerVersion": "1.9",
      //      "autoUpgradeMinorVersion": true,
      //      "settings": {
      //        "fileUris": [
      //          "[concat(variables('StorageAccount'), '/', variables('BuildConfigScriptFolder'), '/', variables('BuildConfigScriptFileName'), parameters('sasKey'))]"
      //        ],
      //        "commandToExecute": "[concat('powershell -ExecutionPolicy Unrestricted -File ', variables('BuildConfigScriptFileName'))]"
      //      }
      //    }
      //  }
      //]
    }


  ],
    "outputs": {
    }
  }
